# ragemp-c-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: blip.h  blipPool.h  checkpoint.h  checkpointPool.h  clrHost.h  clrPlugin.h  colshape.h  colshapePool.h  config.h  entity.h  eventHandler.h  events.h  marker.h  markerPool.h  memory.h  multiplayer.h  objectPool.h  player.h  playerPool.h  plugin.h  pool.h  rage.h  textLabel.h  textLabelPool.h  utils.h  vehicle.h  vehiclePool.h  world.h  wrapper.h
include/wrapper/: blip.h  blipPool.h  checkpoint.h  checkpointPool.h  colshape.h  colshapePool.h  config.h  entity.h  marker.h  markerPool.h  multiplayer.h  objectPool.h  player.h  playerPool.h  pool.h  textLabel.h  textLabelPool.h  vehicle.h  vehiclePool.h  world.h
src/: CMakeLists.txt  blip.cpp  blipPool.cpp  checkpoint.cpp  checkpointPool.cpp  clrHost.cpp  clrPlugin.cpp  colshape.cpp  colshapePool.cpp  config.cpp  entity.cpp  eventHandler.cpp  events.cpp  marker.cpp  markerPool.cpp  memory.cpp  multiplayer.cpp  objectPool.cpp  player.cpp  playerPool.cpp  plugin.cpp  pool.cpp  rage.cpp  textLabel.cpp  textLabelPool.cpp  utils.cpp  vehicle.cpp  vehiclePool.cpp  world.cpp
src/wrapper/: blip.cpp  blipPool.cpp  checkpoint.cpp  checkpointPool.cpp  colshape.cpp  colshapePool.cpp  config.cpp  entity.cpp  marker.cpp  markerPool.cpp  multiplayer.cpp  objectPool.cpp  player.cpp  playerPool.cpp  pool.cpp  textLabel.cpp  textLabelPool.cpp  vehicle.cpp  vehiclePool.cpp  world.cpp
tests/: CMakeLists.txt  main.c  plugin.c
